jumbotron whitespace fix

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,7 +14,6 @@
 }
 
 .jumbotron {
-  height: 400px;
   color: white;
   text-shadow: #444 0 1px 1px;
   background:transparent;
